@@ -52,6 +52,7 @@ import static org.mockito.Mockito.when;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.function.Consumer;
 
 import org.hisp.dhis.analytics.AggregationType;
@@ -91,8 +92,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 import org.springframework.jdbc.core.JdbcTemplate;
-
-import com.google.common.collect.ImmutableList;
 
 /**
  * @author Luciano Fiandesio
@@ -338,10 +337,9 @@ class EventsAnalyticsManagerTest extends EventAnalyticsTest
     {
         String expected = "ax.\"fWIAEtYVEGk\" is null";
         String unexpected = "(ax.\"fWIAEtYVEGk\" in (";
-        testIt( IN, NV,
-            ImmutableList.of(
-                ( capturedSql ) -> assertThat( capturedSql, containsString( expected ) ),
-                ( capturedSql ) -> assertThat( capturedSql, not( containsString( unexpected ) ) ) ) );
+        testIt( IN, NV, List.of(
+            ( capturedSql ) -> assertThat( capturedSql, containsString( expected ) ),
+            ( capturedSql ) -> assertThat( capturedSql, not( containsString( unexpected ) ) ) ) );
     }
 
     private void testIt( QueryOperator operator, String filter, Collection<Consumer<String>> assertions )
@@ -485,7 +483,8 @@ class EventsAnalyticsManagerTest extends EventAnalyticsTest
                 new BaseDimensionalObject( DATA_X_DIM_ID, DimensionType.PROGRAM_INDICATOR, getList( piA, piB ) ) )
             .addFilter( new BaseDimensionalObject( ORGUNIT_DIM_ID, DimensionType.ORGANISATION_UNIT, getList( ouA ) ) )
             .addDimension( new BaseDimensionalObject( PERIOD_DIM_ID, DimensionType.DATA_X, getList( peA ) ) )
-            .addDimension( new BaseDimensionalObject( PERIOD_DIM_ID, DimensionType.PERIOD, getList( peA ) ) ).build();
+            .addDimension( new BaseDimensionalObject( PERIOD_DIM_ID, DimensionType.PERIOD, getList( peA ) ) )
+            .build();
 
         EventQueryParams.Builder eventQueryParamsBuilder = new EventQueryParams.Builder( params )
             .withProgram( program )
@@ -512,12 +511,12 @@ class EventsAnalyticsManagerTest extends EventAnalyticsTest
 
         verify( jdbcTemplate ).queryForRowSet( sql.capture() );
 
-        String expectedLastSubquery = " from (select \"yearly\",\"" + programDataElement.getUid()
+        String expectedLastSubquery = " from (select \"psi\",\"yearly\",\"" + programDataElement.getUid()
             + "\",cast('2000Q1' as text) as \"monthly\",\"ou\","
             + "row_number() over (partition by ou, ao order by iax.\"executiondate\" "
             + (analyticsAggregationType == AnalyticsAggregationType.LAST ? "desc" : "asc") + ") as pe_rank "
             + "from " + getTable( programA.getUid() ) + " iax where iax.\"executiondate\" >= '1990-03-31' "
-            + "and iax.\"executiondate\" <= '2000-03-31' and \"" + programDataElement.getUid() + "\" is not null)";
+            + "and iax.\"executiondate\" <= '2000-03-31' and iax.\"" + programDataElement.getUid() + "\" is not null)";
 
         assertThat( sql.getValue(), containsString( expectedLastSubquery ) );
 
